WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269370
[WGSL] Validate results annotated with must_use are not discarded
https://bugs.webkit.org/show_bug.cgi?id=269370
Summary
[WGSL] Validate results annotated with must_use are not discarded
Tadeu Zagallo
Reported
2024-02-14 09:12:13 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-14 09:13:03 PST
<
rdar://problem/122951915
>
Tadeu Zagallo
Comment 2
2024-02-14 09:15:44 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24421
EWS
Comment 3
2024-02-15 04:44:38 PST
Committed
274717@main
(5e14e8e40aba): <
https://commits.webkit.org/274717@main
> Reviewed commits have been landed. Closing PR #24421 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug