[WGSL] Validate results annotated with must_use are not discarded https://bugs.webkit.org/show_bug.cgi?id=269370 rdar://122951915

Reviewed by Mike Wyrzykowski.

Check that functions/builtins annotated with must_use are not called from call statements.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::chooseOverload):
* Source/WebGPU/WGSL/TypeStore.cpp:
(WGSL::TypeStore::functionType):
* Source/WebGPU/WGSL/TypeStore.h:
* Source/WebGPU/WGSL/Types.h:

Canonical link: https://commits.webkit.org/274717@main