Source/WebGPU/WGSL/TypeStore.h
@@ -98,7 +98,7 @@ public:
     const Type* matrixType(uint8_t columns, uint8_t rows, const Type*);
     const Type* textureType(Types::Texture::Kind, const Type*);
     const Type* textureStorageType(Types::TextureStorage::Kind, TexelFormat, AccessMode);
-    const Type* functionType(Vector<const Type*>&&, const Type*);
+    const Type* functionType(Vector<const Type*>&&, const Type*, bool mustUse);
     const Type* referenceType(AddressSpace, const Type*, AccessMode);
     const Type* pointerType(AddressSpace, const Type*, AccessMode);
     const Type* atomicType(const Type*);
